fix alignment on mobile

--- a/src/pages/friendStyle.scss
+++ b/src/pages/friendStyle.scss
@@ -76,11 +76,13 @@ a:visited {
 
 li:hover {
   box-shadow: -5px 15px 20px rgba(134, 129, 129, 0.7);
+  // border-radius: 15px;
 }
 
 a {
   transition: all 0.3s;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 a:hover {
